# cross-critic

./: .gitignore  BUGS.md  CLAUDE.md  PROGRESS.md  cli.py  config.yaml  pyproject.toml
core/: __init__.py  checkpoints.py  context.py  debate.py  history.py  models.py  multi_model.py  parallel_review.py  workflow.py
scripts/: debate.py  gpt_review.py  parallel_review.py
specs/: debate-light.md  workflow.md
tests/: __init__.py  test_checkpoints.py  test_context.py  test_debate.py  test_diff_viewer.py  test_history.py  test_models.py  test_multi_model.py  test_parallel_review.py  test_workflow.py
viewer/: app.py  diff.py  history.py
workflows/: __init__.py  full_cycle.py
