[project]
name = "cross-critic"
version = "0.1.0"
description = "Cross-model critic workflow engine for Claude + GPT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
cli = [
    "rich>=13.0",
    "typer>=0.9.0",
]
viewer = [
    "streamlit>=1.30.0",
]

[project.scripts]
cross-critic = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["core", "workflows"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
